--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset='utf-8'>
-  <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-  <title>Page Title</title>
-  <meta name='viewport' content='width=device-width, initial-scale=1'>
-  <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+  <title>RocketSeat Station</title>
   <script src='./bundle.js'></script>
 </head>
 <body>
-  <h1>Hello!</h1>
+  <h1>Hello World!</h1>
   
 </body>
 </html>
