--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset='utf-8'>
   <title>RocketSeat Station</title>
-  <script src='./bundle.js'></script>
 </head>
 <body>
-  <h1>Hello World!</h1>
-  
+  <h1>Hello world!</h1>
+  <script src="./bundler2.js"></script>
+  <!-- <script src="./bundler.js"></script> -->
 </body>
 </html>
