--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset='utf-8'>
-  <title>RocketSeat Station</title>
-</head>
-<body>
-  <h1>Hello world!</h1>
-  <script src="./bundler2.js"></script>
-  <!-- <script src="./bundler.js"></script> -->
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>RocketSeat Station</title>
+  </head>
+  <body>
+    <!-- <h1>Hello world!</h1> -->
+    <script src="./bundler2.js"></script>
+    <!-- <script src="./bundler.js"></script> -->
+  </body>
 </html>
