--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <!-- <h1>Hello world!</h1> -->
-    <script src="./bundler2.js"></script>
+    <script src="./bundle.js"></script>
     <!-- <script src="./bundler.js"></script> -->
   </body>
 </html>
